# encodeDemo

./: .gitignore  IMPROVED_MP3_ENCODER_README.md  STEREO_COUPLING_IMPROVEMENTS.md  readme.md
flac/flac-1.5.0/: BUILD_FLAC_CROSS.md  CMakeLists.txt  build_flac.sh
lame/lame-3.99.5/: BUILD_README.md  CMakeLists.txt  build_lame.bat  build_lame.sh  example_usage.c  fix_headers.h  test_build.sh
src/include/flac/FLAC++/: all.h  decoder.h  encoder.h  metadata.h
src/libs/flac/: libFLAC++.11.dylib  libFLAC.14.dylib
src/libs/vorbis/: libogg.0.dylib  libvorbis.0.4.9.dylib  libvorbis.dylib  libvorbisenc.2.0.12.dylib  libvorbisenc.dylib  libvorbisfile.dylib
src/test/: AUDIO_QUALITY_GUIDE.md  AudioFileLoader.cpp  AudioFileLoader.h  AudioQualityAnalyzer.cpp  AudioQualityAnalyzer.h  CMakeLists.txt  EncoderInfo.h  EncoderManager.cpp  EncoderManager.h  QualityReportHelper.h  ResourceMonitor.cpp  ResourceMonitor.h  audio_file_test.cpp  audio_quality_test.cpp  encoder.h  encoderTest.cpp  encoderTest.h  flacEncoder.cpp  flacEncoder.h  main.cpp  mp3Encoder.cpp  mp3Encoder.h  vorbisEncoder.cpp  vorbisEncoder.h
src/test/testQuality/: Makefile  README.md  advanced_test_result.json  audio_quality_evaluator.py  batch_quality_evaluator.py  config.json  install_dependencies.sh  simple_quality_evaluator.py  test_quality_tools.py
src/test/testQuality/batch_test_results/: detailed_results.json  results.csv  summary_report.json
vorbis/: CMakeLists.txt  README.md  build_vorbis.sh  quick_build.sh  test_libraries.sh
vorbis/build_macos/: CMakeCache.txt  Makefile  cmake_install.cmake
vorbis/build_macos/install_macos/lib/: libvorbis.dylib
vorbis/build_macos/install_macos/lib/cmake/Vorbis/: VorbisTargets-release.cmake
vorbis/build_macos/install_macos/lib/pkgconfig/: ogg.pc  vorbis.pc
vorbis/build_macos/libogg-prefix/src/libogg-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  OggTargets.cmake  cmake_install.cmake  install_manifest.txt
vorbis/build_macos/libogg-prefix/src/libogg-stamp/: libogg-build-Release.cmake  libogg-configure-Release.cmake  libogg-install-Release.cmake  libogg-source_dirinfo.txt
vorbis/build_macos/libogg-prefix/tmp/: libogg-cfgcmd.txt  libogg-mkdirs.cmake
vorbis/build_macos/libvorbis-prefix/src/libvorbis-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  vorbisenc.pc  vorbisfile.pc
vorbis/build_macos/libvorbis-prefix/src/libvorbis-build/lib/: Makefile  cmake_install.cmake  libvorbis.0.4.9.dylib  libvorbisenc.2.0.12.dylib  libvorbisenc.dylib  libvorbisfile.3.3.8.dylib  libvorbisfile.dylib
vorbis/build_macos/libvorbis-prefix/src/libvorbis-stamp/: libvorbis-build-Release.cmake  libvorbis-configure-Release.cmake  libvorbis-install-Release.cmake  libvorbis-source_dirinfo.txt
vorbis/build_macos/libvorbis-prefix/tmp/: libvorbis-cfgcmd.txt  libvorbis-mkdirs.cmake
vorbis/libogg-1.3.6/: Makefile  config.h  config.status  libtool  ogg-uninstalled.pc  ogg.pc
vorbis/libogg-1.3.6/doc/: Makefile
vorbis/libogg-1.3.6/doc/libogg/: Makefile
vorbis/libogg-1.3.6/include/: Makefile
vorbis/libogg-1.3.6/include/ogg/: Makefile
vorbis/libogg-1.3.6/src/: Makefile  bitwise.lo  framing.lo  libogg.la  test_bitwise  test_framing
vorbis/libogg-1.3.6/src/.deps/: bitwise.Plo  framing.Plo  test_bitwise-bitwise.Po  test_framing-framing.Po
vorbis/libogg-1.3.6/src/.libs/: libogg.0.dylib  libogg.lai
vorbis/libvorbis-1.3.7/: CMakeLists.txt  Makefile  config.h  config.status  libtool  vorbis-uninstalled.pc  vorbis.pc  vorbisenc-uninstalled.pc  vorbisenc.pc  vorbisfile-uninstalled.pc  vorbisfile.pc
vorbis/libvorbis-1.3.7/doc/: Makefile
vorbis/libvorbis-1.3.7/doc/libvorbis/: Makefile
vorbis/libvorbis-1.3.7/doc/vorbisenc/: Makefile
vorbis/libvorbis-1.3.7/doc/vorbisfile/: Makefile
vorbis/libvorbis-1.3.7/examples/: Makefile
vorbis/libvorbis-1.3.7/include/: Makefile
vorbis/libvorbis-1.3.7/include/vorbis/: Makefile
vorbis/libvorbis-1.3.7/lib/: Makefile  masking.h  psy.c
vorbis/libvorbis-1.3.7/lib/.deps/: test_sharedbook-sharedbook.Po
vorbis/libvorbis-1.3.7/lib/books/: Makefile
vorbis/libvorbis-1.3.7/lib/books/coupled/: Makefile
vorbis/libvorbis-1.3.7/lib/books/floor/: Makefile
vorbis/libvorbis-1.3.7/lib/books/uncoupled/: Makefile
vorbis/libvorbis-1.3.7/lib/modes/: Makefile  setup_44.h
vorbis/libvorbis-1.3.7/m4/: Makefile
vorbis/libvorbis-1.3.7/test/: Makefile
vorbis/libvorbis-1.3.7/vq/: Makefile
